--- a/resource/Dockerfile
+++ b/resource/Dockerfile
@@ -20,7 +20,7 @@ ARG APPDIR=/app
 WORKDIR  ${APPDIR}
 COPY tensor_serving_release  ${APPDIR}
 RUN chmod +x start.sh &&\
-#     apt-get update &&\
+    apt-get update &&\
 #     apt-get install -y nginx &&\
 #     apt-get install -y  openssl &&\
 #     rm -rf /tmp/* && \
